# postgres-conductor

./: .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  BATCH.md  CLAUDE.md  CONCURRENCY.md  Cargo.toml  PLAN.md  README.md  TEST_STRATEGY.md  TODO.md  cliff.toml  docker-compose.yml  justfile  package.json  postgres-language-server.jsonc  pyproject.toml  review.md  rustfmt.toml  zensical.toml
.github/: FUNDING.yml
.github/workflows/: deploy_docs.yml  docs.yml  publish.yml  pull_request.yml  release.yml
cli/: package.json  tsconfig.json
cli/src/: index.ts
crates/event-router/: Dockerfile
designs/: GROUP_CONCURRENCY.md
docs/: pyproject.toml  zensical.toml
docs/api/: conductor.md  orchestrator.md  task-context.md
docs/content/: index.md
docs/crafting-tasks/: custom-context.md  defining-tasks.md  long-running.md  retries-and-steps.md  triggers.md
docs/getting-started/: first-task.md  installation.md
docs/scaling/: horizontal.md
docs/task-execution/: batching.md  cancellation.md  concurrency.md  deduplication.md  delayed.md  retries.md  time-windows.md  timeouts.md
event-router/: Cargo.toml  Dockerfile  Dockerfile.debug
event-router/src/: destination.rs  lib.rs  main.rs  models.rs  subscriptions.rs
event-router/tests/: integration.rs
migrations/: 0000000000_migrations.sql  0000000001_setup.sql  0000000002_events.sql  0000000003_trace_context.sql
pgconductor-js/: package.json
pgconductor-js/demo/: 01-invoke.ts  01-worker.ts  02-invoke.ts  02-worker.ts  03-invoke.ts  03-worker.ts  DEMO.md  (+12 more)
scripts/: build-migrations.sh
test/: init.sql
(+85 files in other folders)
