[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
tokio = { version = "1.47.0", default-features = false }
etl = { git = "https://github.com/supabase/etl" }
