[package]
name = "event-router"
version = "0.1.0"
edition = "2021"

[dependencies]
etl = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal", "sync"] }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
arc-swap = "1.7"
serde_json = "1.0"
parking_lot = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = "1.0"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
